Modifiqué comentarios y reemplacé la creación del elemento img para la imagen del Pokémon por tener el elemento ya creado en el HTML y solo cambiarle el atributo src. También agregué que el input de búsqueda quedé vacío después de realizar esta

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         </form>
         <div id="descripcion">
             <div id="imagenPokemon">
-                <!-- <img id="imagen" src="" alt="pokemon"> --> <!-- Creado este elemento con JS -->
+                <img id="imagen" src="" alt="pokemon">
             </div>
-
             <ul id="caracteristicas">
                 <li>ID: <p id="idPokemon"></p></li>
                 <li>Nombre: <p id="nombrePokemon"></p></li>
