Modifiqué comentarios y agregué otros más. Modifiqué los eventos de búsqueda para que el valor por defecto sea español. Agregué una función y evento que agregan al localStorage un historial con las búsquedas realizadas en formatoJSON

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="enunIdioma">Lenguaje</p>
             </div>
             <select name="idioma" id="seleccionIdioma">
-                <option value disabled selected>Elige tu idioma</option>
+                <option value disabled selected></option>
                 <option value="0">Español</option>
                 <option value="1">English</option>
             </select>
