--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <li>Rattata</li>
         <li>Raticate</li>
     </ul> -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
 </body>
 
