Se crea una función que obtiene datos de pokemones de la api y los organiza en una cuadrilla en el DOM, esta dentro de un nuevo modulo. Se crea a su vez un boton que cargará más datos de la api cada vez que se presione. Se cambió el la imagen de fondo del apartado de búsqueda. se agregar

--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
                     </ul>
                 </div>
         </section>
+        <section id="listado">
+            <div class="espacioUno"></div>
+            <div class="cajaPokemones">
+                <div id="listaPoke"></div>
+                <input type="button" value="LOAD MORE" id="cargaMas">
+            </div>
+            <div class="espacioDos"></div>
+        </section>
     </main>
     <footer class="footer">
-
     </footer>
     <script type="module" src="./js/script.js"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
