Modifiqué el html, el scss y los assets relacionados con la funcionalidad de favoritos, asimismo el js. Agregué backgrounds con gradientes a los lados de la lista de pokemones. Ajusté medidas de cajas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <input type="button" value="SEARCH" id="btnBusqueda">
                 </form>
             </div>
-            
                 <div id="descripcion">
                     <div id="imagenPokemon">
                         <img id="imagen" src="" alt="pokemon">
@@ -52,6 +51,9 @@
         <section id="listado">
             <div class="espacioUno"></div>
             <div class="cajaPokemones">
+                <div class="listaTitulo">
+                    <h2 class="listHead">POKEMONS</h2>
+                </div>
                 <div id="listaPoke"></div>
                 <input type="button" value="LOAD MORE" id="cargaMas">
             </div>
